// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput.vue should emit the correct values when currencies are not swapped 1`] = `
<div
  class="c-currency-input c-text-input c-text-input--error-right"
>
  <div
    class="c-text-input__label-text"
    id="currency-input-label--test"
  >
    TLOS / USD (TLOS)
  </div>
  <!--v-if-->
  <input
    aria-labelledby="currency-input-label--test"
    class="c-text-input__input"
    inputmode="decimal"
    pattern="[0-9,.]*"
    placeholder="0"
    type="text"
  />
  <q-spinner-stub
    class="c-currency-input__spinner"
    color="primary"
    size="md"
    style="display: none;"
  >
    
    
  </q-spinner-stub>
  <div
    class="c-currency-input__currency-switcher"
  >
    <inline-svg-stub
      aria-hidden="true"
      class="c-currency-input__swap-icon"
      keepduringloading="true"
      src=""
      transformsource="[Function]"
    />
     0.00 USD
  </div>
  <div
    class="c-text-input__error-text"
  />
  <div
    class="c-currency-input__conversion-rate"
  >
    @ 0.19 USD / TLOS
  </div>
</div>
`;

exports[`CurrencyInput.vue should emit the correct values when currencies are not swapped 2`] = `
<div
  class="c-currency-input c-text-input c-text-input--error-right"
>
  <div
    class="c-text-input__label-text"
    id="currency-input-label--test"
  >
    TLOS / USD (TLOS)
  </div>
  <!--v-if-->
  <input
    aria-labelledby="currency-input-label--test"
    class="c-text-input__input"
    inputmode="decimal"
    pattern="[0-9,.]*"
    placeholder="0"
    type="text"
  />
  <q-spinner-stub
    class="c-currency-input__spinner"
    color="primary"
    size="md"
    style="display: none;"
  >
    
    
  </q-spinner-stub>
  <div
    class="c-currency-input__currency-switcher"
  >
    <inline-svg-stub
      aria-hidden="true"
      class="c-currency-input__swap-icon"
      keepduringloading="true"
      src=""
      transformsource="[Function]"
    />
     0.19 USD
  </div>
  <div
    class="c-text-input__error-text"
  />
  <div
    class="c-currency-input__conversion-rate"
  >
    @ 0.19 USD / TLOS
  </div>
</div>
`;

exports[`CurrencyInput.vue should emit the correct values when currencies are not swapped 3`] = `
<div
  class="c-currency-input c-text-input c-text-input--error-right"
>
  <div
    class="c-text-input__label-text"
    id="currency-input-label--test"
  >
    TLOS / USD (TLOS)
  </div>
  <!--v-if-->
  <input
    aria-labelledby="currency-input-label--test"
    class="c-text-input__input"
    inputmode="decimal"
    pattern="[0-9,.]*"
    placeholder="0"
    type="text"
  />
  <q-spinner-stub
    class="c-currency-input__spinner"
    color="primary"
    size="md"
    style="display: none;"
  >
    
    
  </q-spinner-stub>
  <div
    class="c-currency-input__currency-switcher"
  >
    <inline-svg-stub
      aria-hidden="true"
      class="c-currency-input__swap-icon"
      keepduringloading="true"
      src=""
      transformsource="[Function]"
    />
     285.00 USD
  </div>
  <div
    class="c-text-input__error-text"
  />
  <div
    class="c-currency-input__conversion-rate"
  >
    @ 0.19 USD / TLOS
  </div>
</div>
`;

exports[`CurrencyInput.vue should emit the correct values when currencies are swapped 1`] = `
<div
  class="c-currency-input c-text-input c-text-input--error-right"
>
  <div
    class="c-text-input__label-text"
    id="currency-input-label--test-2"
  >
    TLOS / USD (USD)
  </div>
  <!--v-if-->
  <input
    aria-labelledby="currency-input-label--test-2"
    class="c-text-input__input"
    inputmode="decimal"
    pattern="[0-9,.]*"
    placeholder="0"
    type="text"
  />
  <q-spinner-stub
    class="c-currency-input__spinner"
    color="primary"
    size="md"
    style="display: none;"
  >
    
    
  </q-spinner-stub>
  <div
    class="c-currency-input__currency-switcher"
  >
    <inline-svg-stub
      aria-hidden="true"
      class="c-currency-input__swap-icon"
      keepduringloading="true"
      src=""
      transformsource="[Function]"
    />
     1.0000 TLOS
  </div>
  <div
    class="c-text-input__error-text"
  />
  <div
    class="c-currency-input__conversion-rate"
  >
    @ 0.2 USD / TLOS
  </div>
</div>
`;
